--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"homepage": "http://austnly.github.io/books-ui",
 	"name": "books-app",
 	"version": "0.1.0",
+	"homepage": "https://austnly.github.io/books-app",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.3",
@@ -9,7 +9,9 @@
 		"@testing-library/user-event": "^13.5.0",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
+		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.0",
+		"sass": "^1.50.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -39,7 +41,6 @@
 		]
 	},
 	"devDependencies": {
-		"gh-pages": "^3.2.3",
-		"node-sass": "^7.0.1"
+		"gh-pages": "^3.2.3"
 	}
 }
